--- a/table2.ui
+++ b/table2.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>926</width>
-    <height>509</height>
+    <width>1027</width>
+    <height>635</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTableView" name="tableView">
+  <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>891</width>
-     <height>461</height>
+     <x>10</x>
+     <y>10</y>
+     <width>1001</width>
+     <height>611</height>
     </rect>
    </property>
   </widget>
